[gd_scene load_steps=20 format=3 uid="uid://dpu7bldtwxhvf"]

[ext_resource type="Script" uid="uid://fcj7gexxscxa" path="res://commons/context/drawingboard/paper_draw_surface.gd" id="1_6y74l"]
[ext_resource type="Script" uid="uid://bppv1x6mncijo" path="res://addons/godot-xr-tools/objects/pickable.gd" id="2_e58tj"]
[ext_resource type="PackedScene" uid="uid://da2qgxxwwitl6" path="res://addons/godot-xr-tools/objects/highlight/highlight_ring.tscn" id="3_dv8kf"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="4_ptujb"]
[ext_resource type="Animation" uid="uid://ca21ej1p3g2yt" path="res://addons/godot-xr-tools/hands/animations/right/Pinch Tight.res" id="5_bf2wb"]
[ext_resource type="Script" uid="uid://dnbxhbldklmo7" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="6_4563l"]
[ext_resource type="PackedScene" uid="uid://dq8q0mlco488b" path="res://commons/context/drawingboard/pen.tscn" id="7_jmm3e"]
[ext_resource type="Script" uid="uid://bors2m7fgo7mh" path="res://commons/context/drawingboard/pentip_ray_cast.gd" id="8_85m2h"]
[ext_resource type="Script" uid="uid://b6hi7uhr7p53p" path="res://commons/context/drawingboard/reset_canvas_trigger.gd" id="10_npaj0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tvjed"]
size = Vector3(1.97204, 0.140366, 2.00322)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_et178"]
transparency = 1
metallic_specular = 0.0
roughness = 0.0
emission = Color(0.813258, 0.813258, 0.813258, 1)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_y7rkn"]

[sub_resource type="ConvexPolygonShape3D" id="20"]
margin = 0.01
points = PackedVector3Array(-0.0285317, -0.04, 0.00926607, -0.017634, -0.04, -0.0242705, -5.58421e-06, -0.04, 0.0299947, -0.0285317, 0.04, 0.00926607, -0.017634, 0.04, -0.0242705, 0.0176284, -0.04, -0.0242705, 0.0285261, -0.04, 0.00926607, -5.58421e-06, 0.04, 0.0299947, 0.0176284, 0.04, -0.0242705, 0.0285261, 0.04, 0.00926607)

[sub_resource type="CylinderMesh" id="21"]
top_radius = 0.03
bottom_radius = 0.03
height = 0.08
radial_segments = 5
rings = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xkmnl"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="Resource" id="Resource_es876"]
script = ExtResource("6_4563l")
open_pose = ExtResource("5_bf2wb")
closed_pose = ExtResource("5_bf2wb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n0w8w"]
transparency = 1
albedo_color = Color(1, 0.439216, 1, 0.290196)

[sub_resource type="BoxMesh" id="BoxMesh_71p4n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vktvk"]
size = Vector3(0.144881, 0.119266, 0.467804)

[node name="DrawingPaper" type="Node3D"]

[node name="DrawingArea3D" type="Area3D" parent="."]
transform = Transform3D(1.6, 0, 0, 0, 1.6, 0, 0, 0, 1.6, 0, 0.635827, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DrawingArea3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.12219, -0.0143974, 0.0410926)
shape = SubResource("BoxShape3D_tvjed")

[node name="PaperDrawSurface" type="MeshInstance3D" parent="DrawingArea3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 1.12693, 0, 0.0962214)
material_override = SubResource("StandardMaterial3D_et178")
mesh = SubResource("PlaneMesh_y7rkn")
script = ExtResource("1_6y74l")
texture_size = Vector2i(2048, 2048)
default_brush_size = 2
default_snap_grid_size = 2

[node name="Label3D" type="Label3D" parent="DrawingArea3D"]
transform = Transform3D(0.675, 0, 0, 0, 0.655676, -0.160358, 0, 0.160358, 0.655676, 1.13375, -0.649394, 0.0267455)
text = "Draw a cricle and a line.
"
font_size = 12
outline_size = 4

[node name="GrabPen_1" type="RigidBody3D" parent="." groups=["SnapToy", "SnapToyYellow"]]
transform = Transform3D(1, 0, 0, 0, 0.798383, 0.602149, 0, -0.602149, 0.798383, 1.63943, -0.501351, 0.0795422)
collision_layer = 4
collision_mask = 65543
freeze = true
freeze_mode = 1
script = ExtResource("2_e58tj")
ranged_grab_method = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrabPen_1"]
transform = Transform3D(0.5, 0, 0, 0, 0.143881, 0.478851, 0, -0.478851, 0.143881, 0, -0.0457307, 0.149652)
top_level = true
shape = SubResource("20")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabPen_1"]
transform = Transform3D(0.5, 0, 0, 0, 1.23738, 0.478851, 0, -4.11812, 0.143881, 0, -0.0083216, 0.0251512)
visible = false
mesh = SubResource("21")
surface_material_override/0 = SubResource("StandardMaterial3D_xkmnl")

[node name="HighlightRing" parent="GrabPen_1" instance=ExtResource("3_dv8kf")]
transform = Transform3D(1, 0, 0, 0, 0.287762, 0.957702, 0, -0.957702, 0.287762, 0, -0.0457307, 0.149652)

[node name="GrabPointHandleRight" parent="GrabPen_1" instance=ExtResource("4_ptujb")]
transform = Transform3D(0.54911, 0, -0.83575, -2.98023e-08, 1, 0, 0.83575, 0, 0.54911, 0.0650897, -0.00583705, 0.0836029)
hand_pose = SubResource("Resource_es876")

[node name="Pen" parent="GrabPen_1" instance=ExtResource("7_jmm3e")]
transform = Transform3D(0.0738661, 0.0448485, -0.99626, 0.981769, -0.178708, 0.0647472, -0.175136, -0.98288, -0.0572312, 0.0163842, -0.0224608, 0.182688)

[node name="PentipRayCast" type="Node3D" parent="GrabPen_1/Pen"]
transform = Transform3D(0.998696, 0.0509984, 0.00219911, -0.0509898, 0.998691, -0.00383949, -0.00239204, 0.0037223, 0.99999, 0.0115744, 0.202652, 0.0241176)
script = ExtResource("8_85m2h")
brush_size = 2
snap_grid_size = 64
is_experimental = true
use_random_dots = true

[node name="RayCast3D" type="RayCast3D" parent="GrabPen_1/Pen"]
transform = Transform3D(0.99836, 0.0433754, 0.0373415, 0.041855, -0.998299, 0.04056, 0.0390373, -0.0389305, -0.998478, 0.0144916, 0.0437487, 0.0175199)
target_position = Vector3(0, -1.055, 0)
collide_with_areas = true

[node name="Label3D" type="Label3D" parent="GrabPen_1/Pen"]
transform = Transform3D(-0.00990324, -0.0245906, 0.157788, 0.15962, 0.00325425, 0.0105253, -0.00482693, 0.158065, 0.0243308, 0.0236849, 0.0286268, 0.0296831)
text = "Datapoints: 0"
font_size = 16
outline_size = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabPen_1/Pen"]
transform = Transform3D(-0.00986546, 0.0179598, -0.000208685, -0.0016336, -0.108515, 0.000287609, -6.35637e-05, 0.00139845, 0.0249975, 0.023521, 0.0273853, 0.0272765)
material_override = SubResource("StandardMaterial3D_n0w8w")
mesh = SubResource("BoxMesh_71p4n")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.118739, 0.489452, -0.863908, 0.0787077, 0.862686, 0.499578, 0.989801, -0.127315, 0.0639105, 0.23113, 0.146854, 0.443186)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.66632, 0.091693, 1.17943)
light_color = Color(0.788235, 1, 1, 1)
light_energy = 0.489

[node name="ResetButton" type="Area3D" parent="."]
transform = Transform3D(0.27, 0, 0, 0, 0.27, 0, 0, 0, 0.27, 1.25968, -1.04975, 0.149604)
visible = false
script = ExtResource("10_npaj0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ResetButton"]
transform = Transform3D(1, 0, -2.3842e-07, 0, 1, 0, 2.3842e-07, 0, 1, 0.653194, 0.371922, 0.250938)
shape = SubResource("BoxShape3D_vktvk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ResetButton"]
transform = Transform3D(0.095, 0, 0, 0, 0.126, 0, 0, 0, 0.365, 0.609658, 0.355734, 0.247258)
material_override = SubResource("StandardMaterial3D_n0w8w")
mesh = SubResource("BoxMesh_71p4n")

[node name="Label3D" type="Label3D" parent="ResetButton"]
transform = Transform3D(-2.22928e-08, -0.51, 2.22928e-08, 1.9489e-15, 2.22928e-08, 0.51, -0.51, 2.22928e-08, 9.7445e-16, 0.602639, 0.429115, 0.251396)
text = "reset"

[node name="TextInfo" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.795477, -0.893072, 1.15212)

[node name="MeshInstance3D" type="MeshInstance3D" parent="TextInfo"]
transform = Transform3D(0.02565, 0, 0, 0, 0.03402, 0, 0, 0, 0.5454, 0.838526, 0.051126, 0.114851)
material_override = SubResource("StandardMaterial3D_n0w8w")
mesh = SubResource("BoxMesh_71p4n")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="TextInfo"]
transform = Transform3D(-6.01906e-09, -0.1377, 6.01906e-09, 5.26203e-16, 6.01906e-09, 0.1377, -0.1377, 6.01906e-09, 2.63102e-16, 0.836631, 0.0709389, 0.12013)
text = "How many datapoints is need to draw a circle?"

[node name="GrabPen_2" type="RigidBody3D" parent="." groups=["SnapToy", "SnapToyYellow"]]
transform = Transform3D(1, 0, 0, 0, 0.798383, 0.602149, 0, -0.602149, 0.798383, 1.96749, -0.501351, 0.0795422)
collision_layer = 4
collision_mask = 65543
freeze = true
freeze_mode = 1
script = ExtResource("2_e58tj")
ranged_grab_method = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrabPen_2"]
transform = Transform3D(0.5, 0, 0, 0, 0.143881, 0.478851, 0, -0.478851, 0.143881, 0, -0.0457307, 0.149652)
top_level = true
shape = SubResource("20")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabPen_2"]
transform = Transform3D(0.5, 0, 0, 0, 1.23738, 0.478851, 0, -4.11812, 0.143881, 0, -0.0083216, 0.0251512)
visible = false
mesh = SubResource("21")
surface_material_override/0 = SubResource("StandardMaterial3D_xkmnl")

[node name="HighlightRing" parent="GrabPen_2" instance=ExtResource("3_dv8kf")]
transform = Transform3D(1, 0, 0, 0, 0.287762, 0.957702, 0, -0.957702, 0.287762, 0, -0.0457307, 0.149652)

[node name="GrabPointHandleRight" parent="GrabPen_2" instance=ExtResource("4_ptujb")]
transform = Transform3D(0.54911, 0, -0.83575, -2.98023e-08, 1, 0, 0.83575, 0, 0.54911, 0.0650897, -0.00583705, 0.0836029)
hand_pose = SubResource("Resource_es876")

[node name="Pen" parent="GrabPen_2" instance=ExtResource("7_jmm3e")]
transform = Transform3D(0.0738661, 0.0448485, -0.99626, 0.981769, -0.178708, 0.0647472, -0.175136, -0.98288, -0.0572312, 0.0163842, -0.0224608, 0.182688)

[node name="PentipRayCast" type="Node3D" parent="GrabPen_2/Pen"]
transform = Transform3D(0.998696, 0.0509984, 0.00219911, -0.0509898, 0.998691, -0.00383949, -0.00239204, 0.0037223, 0.99999, 0.0115744, 0.202652, 0.0241176)
script = ExtResource("8_85m2h")
brush_size = 2
snap_grid_size = 256
is_experimental = true
min_brush_size = 2
max_brush_size = 3
min_snap_size = 1
max_snap_size = 2
use_random_dots = true

[node name="RayCast3D" type="RayCast3D" parent="GrabPen_2/Pen"]
transform = Transform3D(0.99836, 0.0433754, 0.0373415, 0.041855, -0.998299, 0.04056, 0.0390373, -0.0389305, -0.998478, 0.0144916, 0.0437487, 0.0175199)
target_position = Vector3(0, -1.055, 0)
collide_with_areas = true

[node name="Label3D" type="Label3D" parent="GrabPen_2/Pen"]
transform = Transform3D(-0.00990324, -0.0245906, 0.157788, 0.15962, 0.00325425, 0.0105253, -0.00482693, 0.158065, 0.0243308, 0.0236849, 0.0286268, 0.0296831)
text = "Datapoints: 0"
font_size = 16
outline_size = 4

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabPen_2/Pen"]
transform = Transform3D(-0.00986546, 0.0179598, -0.000208685, -0.0016336, -0.108515, 0.000287609, -6.35637e-05, 0.00139845, 0.0249975, 0.023521, 0.0273853, 0.0272765)
material_override = SubResource("StandardMaterial3D_n0w8w")
mesh = SubResource("BoxMesh_71p4n")

[connection signal="dropped" from="GrabPen_1" to="GrabPen_1/Pen/PentipRayCast" method="_on_grab_pen_1_dropped"]
[connection signal="grabbed" from="GrabPen_1" to="DrawingArea3D/PaperDrawSurface" method="_on_scribel_pen_pen_grabbed"]
[connection signal="grabbed" from="GrabPen_1" to="GrabPen_1/Pen/PentipRayCast" method="_on_grab_pen_1_grabbed"]
[connection signal="area_entered" from="ResetButton" to="ResetButton" method="_on_area_entered"]
[connection signal="dropped" from="GrabPen_2" to="GrabPen_2/Pen/PentipRayCast" method="_on_grab_pen_1_dropped"]
[connection signal="grabbed" from="GrabPen_2" to="DrawingArea3D/PaperDrawSurface" method="_on_scribel_pen_pen_grabbed"]
[connection signal="grabbed" from="GrabPen_2" to="GrabPen_2/Pen/PentipRayCast" method="_on_grab_pen_1_grabbed"]
